# conversational_credit_negotiation_flow

./: README.md  pyproject.toml
src/conversational_credit_negotiation_flow/: main.py
src/conversational_credit_negotiation_flow/agents/: __init__.py  classification_agent.py  debt_negotiation_agent.py
src/conversational_credit_negotiation_flow/models/: __init__.py  conversation_classification.py  debt_negotiation.py  flow_state.py  message.py  option_config.py  persona.py
